Update colors and fix logo in dark mode

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -21,6 +21,10 @@ h1, h2, h3:not(.h5), h4 {
 @import "ptio-font";
 @import "flag-icon";
 
+.textColor {
+ fill: rgb(40,50,63);
+}
+
 .post-info, .post-title {
   color: theme-color("light");
   display: inline;
